TEST_PROGRAMS/INVALID/05/distributive_var_with_one_dec_on_single_line.go
/* "Distributive" var declaration with one declaration on a single line. */

package main

var ( a bool = true ) // Error: Closing bracket must be on its own line.


func main() {
	// Do nothing
}
